# rust-screen-animator

./: Cargo.toml
src/: animations.rs  main.rs  shader.rs
src/capture/: capturer.rs  macos_capturer.rs  mod.rs  noop_capturer.rs  windows_capturer.rs
