[package]
name = "screen-animator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
clap = "4.5.4"
gl = "0.14.0"
glfw = "0.55.0"
image = "0.25.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
core-foundation-sys = "0.8.6"
core-graphics = "0.23.2"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
# Add Windows-specific dependencies here if needed