[package]
name = "screen-animator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
cgmath = "0.18.0"
clap = { version = "4.5.4", features = ["derive"] }
gl = "0.14.0"
glfw = "0.55.0"
image = "0.25.1"
keyframe = "1.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
core-foundation-sys = "0.8.6"
core-graphics = "0.23.2"
objc-foundation = "0.1.1"
objc_id = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "UI",
    "Storage",
    "Storage_Streams",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging", 
]}
